--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,13 +1,27 @@
-{%extends "base.html" %}
-{%block title%}
-Login Page
-{%endblock%}
+{%extends "base.html" %} {%block title%} Login Page {%endblock%} {%block
+content%}
+<h2>Enter your credentials to Login</h2>
+{% if error %}
+<p style="color: red">{{ error }}</p>
+{% endif %}
+<hr />
+<form action="{{url_for('api.login')}}" , method="POST">
+  {{form.hidden_tag()}}
+  <div class="form-group">
+    {{form.email.label(style="color: green; font-size: 24px;")}} {{form.email(class="form-control", placeholder="Enter your Email Address")}}
+  </div>
+  <div class="form-group">
+    {{form.password.label(style="color: green; font-size: 24px;")}} {{form.password(class="form-control",
+    placeholder="Enter your Password")}}
+  </div>
+  <br />
 
+  {{form.submit(class="btn btn-primary")}}
+  <br>
 
-
-{%block content%}
-
-
-
+  <small id="emailHelp" class="form-text text-muted"
+    >We'll never share your email with anyone else.</small
+  >
+</form>
 
 {%endblock%}
