--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,13 +7,13 @@
 
     <title>
         {% block title %}
-        Hello, world!
+        Farmers Point 
         {% endblock %}
     </title>
 
 </head>
 <body>
-<header class="p-3 bg-primary text-dark">
+    <header class="p-3 bg-primary text-dark">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <span class="fw-bold fs-4">Farmers Point</span>
@@ -21,10 +21,12 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="{{url_for('api.home')}}" class="nav-link px-2 text-white">Home</a></li>
+            <li><a href="{{url_for('api.get_all_products')}}" class="nav-link px-2 text-white">Products</a></li>
+            {% if current_user.is_authenticated %}
             <li><a href="#" class="nav-link px-2 text-white">Orders</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Products</a></li>
             <li><a href="#" class="nav-link px-2 text-white">Cart</a></li>
             <li><a href="#" class="nav-link px-2 text-white">Checkout</a></li>
+            {% endif %}
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
@@ -32,11 +34,20 @@
         </form>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            {% if current_user.is_authenticated %}
+             <li><a href="#" class="nav-link px-2 text-white">{{current_user.username}}</a></li>
+            <li><a href="{{url_for('api.logout')}}" class="nav-link px-2 text-white">Logout</a></li>
+            <li><a href="{{url_for('api.admin')}}" class="nav-link px-2 text-white">Admin</a></li>
+
+            {% else %}
             <li><a href="{{url_for('api.login')}}" class="nav-link px-2 text-white">Login</a></li>
             <li><a href="{{url_for('api.register')}}" class="nav-link px-2 text-white">Sign-Up</a></li>
+            {% endif %}
         </ul>
     </div>
 </header>
+
+
 
 <main>
     {% block content %}{% endblock %}
