--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,68 +1,69 @@
 {% extends "base.html" %}
 
 {% block title %}
-Registration Form
-{% endblock %}
-
-{% block styles %}
-<style>
-    /* Add custom styles for registration form here */
-    .registration-container {
-        max-width: 400px;
-        margin: auto;
-        padding: 30px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        margin-top: 50px;
-    }
-    .registration-container h2 {
-        text-align: center;
-        margin-bottom: 30px;
-    }
-    .form-group {
-        margin-bottom: 20px;
-    }
-    .form-control {
-        height: 50px;
-    }
-    .btn-register {
-        width: 100%;
-        padding: 10px 0;
-        font-size: 1.2rem;
-    }
-    .login-link {
-        text-align: center;
-        margin-top: 20px;
-    }
-</style>
+Login Form
 {% endblock %}
 
 {% block content %}
-<div class="registration-container">
-    <h2>Register</h2>
-    <form action="{{url_for('api.register')}}" method="POST">
-          {{ form.csrf_token }}
+    <!-- Custom styles -->
+    <style>
+        /* Add custom styles specific to the login form here */
+        .login-container {
+            max-width: 400px;
+            margin: auto;
+            padding: 30px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-top: 50px;
+        }
+        .login-container h2 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        .form-control {
+            height: 50px;
+        }
+        .btn-login {
+            width: 100%;
+            padding: 10px 0;
+            font-size: 1.2rem;
+        }
+        .signup-link {
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
+
+    <div class="login-container">
+        <h2>Register</h2>
+        <form action="{{url_for('api.register')}}" method="POST">
+        {{ form.csrf_token }}
         <div class="form-group">
             {{ form.username.label }}
             {{ form.username(class="form-control") }}
         </div>
         <div class="form-group">
-              {{ form.username.label }}
-                {{ form.email(class="form-control") }}
+            {{ form.email.label }}
+            {{ form.email(class="form-control") }}
         </div>
         <div class="form-group">
-              {{ form.password.label }}
+            {{ form.password.label }}
             {{ form.password(class="form-control") }}
         </div>
         <div class="form-group">
-              {{ form.confirm_password.label }}
+            {{ form.confirm_password.label }}
             {{ form.confirm_password(class="form-control") }}
         </div>
         <br>
-         {{ form.submit(class="btn btn-primary btn-register") }}
+        {{ form.submit(class="btn btn-primary btn-register") }}
     </form>
+    <br>
     <div class="login-link">
         Already have an account? <a href="{{url_for('api.login')}}">Login</a>
     </div>
-</div>
+
+    </div>
 {% endblock %}
