--- a/app/templates/create_product.html
+++ b/app/templates/create_product.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Create Product
+Create Product
 {% endblock %}
 
 {% block content %}
-    <!-- Custom styles -->
+  <!-- Custom styles -->
     <style>
-        /* Add custom styles specific to the create product form here */
-        .product-container {
+        /* Add custom styles specific to the login form here */
+        .login-container {
             max-width: 400px;
             margin: auto;
             padding: 30px;
@@ -16,7 +16,7 @@
             border-radius: 5px;
             margin-top: 50px;
         }
-        .product-container h2 {
+        .login-container h2 {
             text-align: center;
             margin-bottom: 30px;
         }
@@ -26,43 +26,53 @@
         .form-control {
             height: 50px;
         }
-        .btn-submit {
+        .btn-login {
             width: 100%;
             padding: 10px 0;
             font-size: 1.2rem;
         }
+        .signup-link {
+            text-align: center;
+            margin-top: 20px;
+        }
     </style>
 
-    <div class="product-container">
-        <h2>Create Product</h2>
-        <form action="{{ url_for('api.create_product') }}" method="POST">
-            {{ form.csrf_token }}
-            <div class="form-group">
-                {{ form.name.label }}
-                {{ form.name(class="form-control", placeholder="Enter product name") }}
-            </div>
-            <div class="form-group">
-                {{ form.price.label }}
-                {{ form.price(class="form-control", placeholder="Enter product price") }}
-            </div>
-            <div class="form-group">
-                {{ form.description.label }}
-                {{ form.description(class="form-control", placeholder="Enter product description") }}
-            </div>
-            <div class="form-group">
-                {{ form.category_id.label }}
-                {{ form.category_id(class="form-control") }}
-            </div>
-            <!-- Additional fields for creating a new category -->
-            <div class="form-group">
-                {{ category_form.name.label }}
-                {{ category_form.name(class="form-control", placeholder="Enter category name") }}
-            </div>
-            <div class="form-group">
-                {{ category_form.description.label }}
-                {{ category_form.description(class="form-control", placeholder="Enter category description") }}
-            </div>
-            <button type="submit" class="btn btn-primary btn-submit">Add Product</button>
-        </form>
-    </div>
+    <div class="login-container">
+    <h3>Create Product</h3>
+    <form method="post">
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+            {{ form.name.label }}
+            {{ form.name(size=50, class="form-control") }}
+            {% for error in form.name.errors %}
+                <span style="color: red;">{{ error }}</span><br>
+            {% endfor %}
+        </div>
+        <div class="form-group">
+            {{ form.price.label }}
+            {{ form.price(class="form-control") }}
+            {% for error in form.price.errors %}
+                <span style="color: red;">{{ error }}</span><br>
+            {% endfor %}
+        </div>
+        <div class="form-group">
+            {{ form.description.label }}
+            {{ form.description(cols=50, rows=5, class="form-control") }}
+            {% for error in form.description.errors %}
+                <span style="color: red;">{{ error }}</span><br>
+            {% endfor %}
+        </div>
+        <div class="form-group">
+            {{ form.quantity.label }}
+            {{ form.quantity(size=10, class="form-control") }}
+            {% for error in form.quantity.errors %}
+                <span style="color: red;">{{ error }}</span><br>
+            {% endfor %}
+        </div>
+        <br>
+        <div>
+            {{ form.submit(class="btn btn-primary") }}
+        </div>
+    </form>
+</div>
 {% endblock %}
